[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/examples/authentication.gd" type="Script" id=1]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=2]
[ext_resource path="res://data/fonts/sub-titles.tres" type="DynamicFont" id=4]
[ext_resource path="res://data/fonts/descriptions.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Authentication" type="Panel"]
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 6 )]

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Authentication Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 5 )
text = "This example shows how to acquire an authentication ticket from Steam and pass it to another client or server.  Also validating the ticket, closing the session, and all that.  Please note this example is only creating and using auth tickets with yourself.  You will need networking logic to use this correctly with servers and other players."
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Output Title" type="Label" parent="Frame/Main" index="2"]
margin_top = 158.0
margin_right = 905.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 4 )
text = "Output"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="Frame/Main" index="3"]
margin_top = 202.0
margin_right = 905.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
scroll_following = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" parent="Frame/Sidebar/Options/List" index="0"]
text = "Authentication Options"

[node name="GetAuthTicket" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "Get Auth Ticket"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BeginAuthSession" type="Button" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 70.0
margin_right = 270.0
margin_bottom = 98.0
theme = ExtResource( 2 )
text = "Begin Auth Session"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CancelAuthTicket" type="Button" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 108.0
margin_right = 270.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "Cancel Auth Ticket"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EndAuthSession" type="Button" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 146.0
margin_right = 270.0
margin_bottom = 174.0
theme = ExtResource( 2 )
text = "End Auth Session"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Spacer" type="Label" parent="Frame/Sidebar/Options/List" index="5"]
margin_top = 184.0
margin_right = 270.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 19 )
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="6"]
margin_top = 213.0
margin_right = 270.0
margin_bottom = 241.0
theme = ExtResource( 2 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Frame/Sidebar/Options/List/GetAuthTicket" to="." method="_on_GetAuthTicket_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/BeginAuthSession" to="." method="_on_BeginAuthSession_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/CancelAuthTicket" to="." method="_on_CancelAuthTicket_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/EndAuthSession" to="." method="_on_EndAuthSession_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_Back_pressed"]

[editable path="Frame"]
